Customize client's generated README

--- a/.gitignore
+++ b/.gitignore
@@ -121,6 +121,7 @@ dmypy.json
 # OS temp files
 .DS_Store
 
-# generated python client
+# generated python client and associated files
 geoapi_client/
 swagger.json
+client/swagger-codegen/
