Generate client python package (#7)
* Add initial steps for creation of python client using 'swagger-codegen'

* Add steps to push to pypi

* Customize client's generated README

* Fix client's README and setup.py

* Remove linkes to other README files in generated client

* Fix some of the marshalling

* Change api's auth description

also fix generated client's setup.py for python2 use

* Bump version

* Fix file upload route so that it returns list

--- a/.gitignore
+++ b/.gitignore
@@ -120,3 +120,8 @@ dmypy.json
 
 # OS temp files
 .DS_Store
+
+# generated python client and associated files
+geoapi_client/
+swagger.json
+client/swagger-codegen/
