--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,23 @@
-flask-restplus
-flask
-sqlalchemy
-psycopg2
-ipython
-geojson
-pillow
-pytest
-pyjwt[crypto]
-geoalchemy2
-alembic
-shapely
 agavepy
-fiona
+alembic
 celery
 coverage
-pytest-cov
-requests
 ffmpeg-python
+fiona
+flask
+flask-restplus
+geoalchemy2
+geojson
+gevent
+ipython
 laspy
+pillow
+psycopg2
+pyjwt[crypto]
 pyproj
+pytest
+pytest-cov
 regex
+requests
+shapely
+sqlalchemy
