--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -86,4 +86,4 @@ services:
     tty: true
     container_name: geoapi
     hostname: geoapi
-    command: "gunicorn -w 4 -b 0.0.0.0:8000 geoapi.app:app --reload"
+    command: "gunicorn -w 4 -b 0.0.0.0:8000 geoapi.app:app -k gevent --reload --timeout 300"
