--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -4,6 +4,12 @@ events {
   use epoll;
 }
 http {
+
+    gzip on;
+    gzip_proxied any;
+    gzip_types *;
+    gzip_min_length 250;
+
     server {
         include /etc/nginx/mime.types;
         client_max_body_size 10g;
