Task/filtering bounding box and date range (#8)
* Add tests for feature asset filtering

* Pep8 fixes

* Support bounding box when requesting features

* Add test for bounding box filtering

* Support filtering features using createdDate

* pep8 fixes

* Use specific commit of PotreeConverter instead of just develop branch

* Remove bitbucket pipeline

* Fix building of Potree and fix the commit that we use

* Use earlier commit for building potree

* Rename end and start date variables for filtering by date

--- a/Dockerfile.potree
+++ b/Dockerfile.potree
@@ -14,7 +14,8 @@ ENV PATH /opt/tools/LAStools/bin/:$PATH
 RUN git clone --depth 1 https://github.com/m-schuetz/LAStools.git && cd LAStools/LASzip && mkdir build && cd build && \
 cmake -DCMAKE_BUILD_TYPE=Release .. && make && make install && ldconfig
 
-RUN git clone -b develop https://github.com/potree/PotreeConverter.git && cd PotreeConverter && mkdir build && cd build && \
+RUN git clone -b develop https://github.com/potree/PotreeConverter.git && cd PotreeConverter && git checkout 685ef56a7864ea2a9781b2ab61580f11f0983d29 && \
+mkdir build && cd build && \
 cmake -DCMAKE_BUILD_TYPE=Release -DLASZIP_INCLUDE_DIRS=/opt/LAStools/LASzip/dll/ -DLASZIP_LIBRARY=/usr/local/lib/liblaszip.so .. && \
 make && make install && cp -r /opt/PotreeConverter/PotreeConverter/resources /resources
 ADD misc/potree/page_template /resources/page_template
