--- a/kube/geoapi.yaml
+++ b/kube/geoapi.yaml
@@ -334,7 +334,7 @@ spec:
         envFrom:
           - configMapRef:
               name: geoapi-environment-vars
-        image: mdillon/postgis
+        image: mdillon/postgis:11
         name: geoapi-postgres
         ports:
         - containerPort: 5432
