--- a/kube/geoapi.yaml
+++ b/kube/geoapi.yaml
@@ -245,7 +245,7 @@ metadata:
     app: geoapi-workers
   name: geoapi-workers
 spec:
-  replicas: 1
+  replicas: 2
   strategy:
     type: Recreate
   selector:
@@ -302,6 +302,56 @@ spec:
           secretRef:
             name: ceph-secret
 
+---
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  annotations:
+    kompose.cmd: kompose convert
+    kompose.version: 1.16.0 (0c01309)
+  labels:
+    app: geoapi-celerybeat
+  name: geoapi-celerybeat
+spec:
+  replicas: 1
+  strategy:
+    type: Recreate
+  selector:
+    matchLabels:
+      app: geoapi-celerybeat
+  template:
+    metadata:
+      labels:
+        app: geoapi-celerybeat
+    spec:
+      containers:
+      - args:
+        - celery
+        - -A
+        - celery_app
+        - beat
+        - -l
+        - INFO
+        envFrom:
+          - configMapRef:
+              name: geoapi-environment-vars
+        env:
+          - name: RABBITMQ_PASSWD
+            valueFrom:
+              secretKeyRef:
+                name: rabbitmq
+                key: password
+          - name: DB_PASSWD
+            valueFrom:
+              secretKeyRef:
+                name: postgres
+                key: password
+
+        image: taccaci/geoapi-workers:latest
+        name: geoapi-workers
+        resources: {}
+      hostname: geoapi-celerybeat
+      restartPolicy: Always
 ---
 apiVersion: apps/v1
 kind: Deployment
