--- a/requirements.txt
+++ b/requirements.txt
@@ -1,23 +1,79 @@
-agavepy
-alembic
-celery
-coverage
-ffmpeg-python
-fiona
-flask
-flask-restplus
-geoalchemy2
-geojson
-gevent
-ipython
-laspy
-pillow
-psycopg2
-pyjwt[crypto]
-pyproj
-pytest
-pytest-cov
-regex
-requests
-shapely
-sqlalchemy
+agavepy==0.9.3
+alembic==1.4.1
+amqp==2.5.2
+aniso8601==8.0.0
+attrs==19.3.0
+backcall==0.1.0
+backports.ssl-match-hostname==3.7.0.1
+billiard==3.6.3.0
+celery==4.4.1
+certifi==2019.11.28
+cffi==1.14.0
+chardet==3.0.4
+Click==7.0
+click-plugins==1.1.1
+cligj==0.5.0
+cloudpickle==1.3.0
+configparser==4.0.2
+coverage==5.0.3
+cryptography==2.8
+decorator==4.4.2
+ffmpeg-python==0.2.0
+Fiona==1.8.13.post1
+Flask==1.1.1
+flask-restplus==0.13.0
+future==0.18.2
+GeoAlchemy2==0.6.3
+geojson==2.5.0
+gevent==1.4.0
+greenlet==0.4.15
+gunicorn==20.0.4
+idna==2.9
+importlib-metadata==1.5.0
+ipython==7.13.0
+ipython-genutils==0.2.0
+itsdangerous==1.1.0
+jedi==0.16.0
+Jinja2==2.11.1
+jsonschema==3.2.0
+kombu==4.6.8
+laspy==1.6.0
+Mako==1.1.2
+MarkupSafe==1.1.1
+more-itertools==8.2.0
+munch==2.5.0
+numpy==1.18.1
+packaging==20.3
+parso==0.6.2
+pexpect==4.8.0
+pickleshare==0.7.5
+Pillow==7.0.0
+pluggy==0.13.1
+prompt-toolkit==3.0.4
+psycopg2==2.8.4
+ptyprocess==0.6.0
+py==1.8.1
+pycparser==2.20
+Pygments==2.6.1
+PyJWT==1.7.1
+pyparsing==2.4.6
+pyproj==2.5.0
+pyrsistent==0.15.7
+pytest==5.3.5
+pytest-cov==2.8.1
+python-dateutil==2.8.1
+python-editor==1.0.4
+pytz==2019.3
+regex==2020.2.20
+requests==2.23.0
+requests-toolbelt==0.9.1
+Shapely==1.7.0
+six==1.14.0
+SQLAlchemy==1.3.13
+traitlets==4.3.3
+urllib3==1.25.8
+vine==1.3.0
+wcwidth==0.1.8
+websocket-client==0.53.0
+Werkzeug==0.16.1
+zipp==3.1.0
