--- a/Dockerfile.potree
+++ b/Dockerfile.potree
@@ -1,9 +1,9 @@
-FROM python:3.7-slim
+FROM pdal/pdal:2.1
 
 RUN apt-get update && apt-get install -y \
 libtiff-dev libgeotiff-dev libgdal-dev \
 libboost-system-dev libboost-thread-dev libboost-filesystem-dev libboost-program-options-dev libboost-regex-dev libboost-iostreams-dev \
-git cmake build-essential wget python3-pip python3-dev ffmpeg \
+git cmake build-essential wget python3.7 python3-pip python3-dev ffmpeg \
 unzip
 
 WORKDIR /opt
@@ -20,7 +20,10 @@ cmake -DCMAKE_BUILD_TYPE=Release -DLASZIP_INCLUDE_DIRS=/opt/LAStools/LASzip/dll/
 make && make install && cp -r /opt/PotreeConverter/PotreeConverter/resources /resources
 ADD misc/potree/page_template /resources/page_template
 
-RUN pip install --upgrade pip
+RUN update-alternatives --install /usr/bin/python3 python3 /usr/bin/python3.6 1
+RUN update-alternatives --install /usr/bin/python3 python3 /usr/bin/python3.7 2
+
+RUN pip3 install --upgrade pip
 
 COPY requirements.txt /requirements.txt
 RUN pip3 install -r /requirements.txt
