--- a/requirements.txt
+++ b/requirements.txt
@@ -25,6 +25,7 @@ flask-restplus==0.13.0
 future==0.18.2
 GeoAlchemy2==0.6.3
 geojson==2.5.0
+geopandas==0.8.1
 gevent==1.4.0
 greenlet==0.4.15
 gunicorn==20.0.4
