DES-1532: add users automatically to projects (#34)
* Throw specific exception for when observable project already exists

* Add users (from systems roles) to observable projects

* Add unit test

* Refactor so any user with jwt can do the observing Observable Project

* Fix call to user create method

* Improve logging when user is trying to create duplicate observable project

* Remove todo

* Remove todo

* Add users (via system roles) when observing project

Fix how we get system roles using service account

* Refactor tenant super token info to be more general

* Fix removing of service accounts

* Rename tenant info variable (again)

* Add to kube configuration using secrets

* Add comment

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -58,6 +58,7 @@ services:
       - FLASK_APP=/app/geoapi/app.py
       - APP_ENV=development
       - ASSETS_BASE_DIR=/assets
+      - TENANT
     stdin_open: true
     tty: true
     container_name: geoapiworkers
@@ -101,6 +102,7 @@ services:
       - FLASK_APP=/app/geoapi/app.py
       - APP_ENV=development
       - ASSETS_BASE_DIR=/assets
+      - TENANT
     stdin_open: true
     tty: true
     container_name: geoapi
