--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,7 @@
 language: generic
 sudo: required
-
+env:
+  - GIT_HASH=$(git log --format=%h -1)
 services:
   - docker
 
@@ -19,10 +20,13 @@ jobs:
       script:
       - docker run --net=test -e APP_ENV=testing taccaci/geoapi:latest pytest --cov=geoapi -m "not worker"
       before_deploy:
+         - docker tag taccaci/geoapi:latest taccaci/geoapi:$(GIT_HASH)
          - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
       deploy:
         provider: script
-        script: docker push taccaci/geoapi:latest
+        script:
+          - docker push taccaci/geoapi:latest
+          - docker push taccaci/geoapi:$GIT_HASH)
         on:
           branch: master
     - name: "geoapi-workers: unit tests / container"
@@ -39,8 +43,11 @@ jobs:
       - docker run --net=test -e APP_ENV=testing taccaci/geoapi-workers:latest pytest --cov=geoapi -m "worker"
       before_deploy:
          - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
+         - docker tag taccaci/geoapi-workers:latest taccaci/geoapi-workers:$(GIT_HASH)
       deploy:
         provider: script
-        script: docker push taccaci/geoapi-workers:latest
+        script:
+          - docker push taccaci/geoapi-workers:latest
+          - docker push taccaci/geoapi-workers:$(GIT_HASH)
         on:
           branch: master
