Revert "Deploy during all branches (to test recent changes)"
This reverts commit aef3e76b10a9a32cde02d103648a4b31f886bb19.

--- a/.travis.yml
+++ b/.travis.yml
@@ -29,7 +29,7 @@ jobs:
           - docker push taccaci/geoapi:latest
           - docker push taccaci/geoapi:${GIT_HASH}
         on:
-          all_branches: true
+          branch: master
     - name: "geoapi-workers: unit tests / container"
       before_script:
       - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
@@ -51,4 +51,4 @@ jobs:
           - docker push taccaci/geoapi-workers:latest
           - docker push taccaci/geoapi-workers:${GIT_HASH}
         on:
-          all_branches: true
+          branch: master
