--- a/kube/prod.env
+++ b/kube/prod.env
@@ -1,5 +1,3 @@
-export GEOAPI_TAG = ?
-# subpath in /assets for files (production uses top-level)
-export ASSETS_SUBPATH=/
+export GEOAPI_TAG = TODO!!!!
 export NODEPORT=31474
 export NSFSHARE_CLUSTER_IP=10.104.129.89
