--- a/kube/staging.env
+++ b/kube/staging.env
@@ -1,6 +1,3 @@
-export GEOAPI_TAG=latest
-# subpath in /assets for files
-#export ASSETS_SUBPATH=/staging/
-export ASSETS_SUBPATH=/assets/staging/
+export GEOAPI_TAG=c30b5b2
 export NODEPORT=31938
 export NSFSHARE_CLUSTER_IP=10.102.247.244
