--- a/kube/Makefile
+++ b/kube/Makefile
@@ -38,7 +38,7 @@ delete: checkforcontext
 
 .PHONY: delete-staging
 delete-staging: KUBE_CONTEXT=geoapi-dev
-delete-staging: delete ## Delete deployment/services/jobs of geoapi
+delete-staging: delete ## Delete deployment/services/jobs of geoapi (STAGING)
 	@echo "Finished deleting geoapi (deployment/services/jobs) in '$(KUBE_CONTEXT)' context"
 
 .PHONY: create-staging
@@ -50,10 +50,10 @@ create-staging: create ## Create deployment/services/jobs of geoapi (STAGING)
 .PHONY: delete-production
 delete-staging: KUBE_CONTEXT=wma-geospatial
 delete-staging: delete ## Delete deployment/services/jobs of geoapi (PRODUCTION) !!!  CAREFUL !
-        @echo "Finished deleting geoapi (deployment/services/jobs) in '$(KUBE_CONTEXT)' context"
+	@echo "Finished deleting geoapi (deployment/services/jobs) in '$(KUBE_CONTEXT)' context"
 
 .PHONY: delete-staging
 create-staging: KUBE_CONTEXT=wma-geospatial
 create-staging: ENV_FILE=prod.env
 create-staging: create ## Create deployment/services/jobs of geoapi (PRODUCTION) !!!  CAREFUL !
-        @echo "Finished creating geoapi (deployment/services/jobs) in '$(KUBE_CONTEXT)' context using ${ENV_FILE} file"
+	@echo "Finished creating geoapi (deployment/services/jobs) in '$(KUBE_CONTEXT)' context using ${ENV_FILE} file"
