Login in to docker before pulling

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ jobs:
   include:
     - name: "geoapi: unit tests / container"
       before_script:
+      - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
       - docker pull taccaci/geoapi:latest
       - docker build --cache-from taccaci/geoapi:latest -t taccaci/geoapi:latest .
       - sudo mkdir /assets
@@ -27,6 +28,7 @@ jobs:
           branch: master
     - name: "geoapi-workers: unit tests / container"
       before_script:
+      - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
       - docker pull taccaci/geoapi-workers:latest
       - docker build --cache-from taccaci/geoapi-workers:latest -t taccaci/geoapi-workers:latest -f Dockerfile.potree .
       - sudo mkdir /assets
