--- a/Dockerfile.potree
+++ b/Dockerfile.potree
@@ -25,6 +25,7 @@ RUN update-alternatives --install /usr/bin/python3 python3 /usr/bin/python3.7 2
 RUN pip3 install --upgrade pip
 
 COPY requirements.txt /requirements.txt
+RUN pip3 install git+https://github.com/mapillary/mapillary_tools
 RUN pip3 install -r /requirements.txt
 
 # Multiple gdal's are installed but we want 2.2 to get needed crs information
@@ -35,4 +36,3 @@ RUN mkdir app
 COPY ./geoapi /app/geoapi
 ENV PYTHONPATH "${PYTHONPATH}:/app"
 WORKDIR /app/geoapi
-
