--- a/.travis.yml
+++ b/.travis.yml
@@ -10,9 +10,7 @@ jobs:
   include:
     - name: "geoapi: unit tests / container"
       before_script:
-      - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
-      - docker pull taccaci/geoapi:latest
-      - docker build --cache-from taccaci/geoapi:latest -t taccaci/geoapi:latest .
+      - docker build -t taccaci/geoapi:latest .
       - sudo mkdir /assets
       - sudo service mysql stop
       - sudo service postgresql stop
@@ -21,18 +19,9 @@ jobs:
       - sleep 5
       script:
       - docker run --net=test -e APP_ENV=testing taccaci/geoapi:latest pytest --cov=geoapi -m "not worker"
-      before_deploy:
-         - docker tag taccaci/geoapi:latest taccaci/geoapi:${GIT_HASH}
-      deploy:
-        provider: script
-        script: docker push taccaci/geoapi:latest && docker push taccaci/geoapi:${GIT_HASH}
-        on:
-          branch: master
     - name: "geoapi-workers: unit tests / container"
       before_script:
-      - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
-      - docker pull taccaci/geoapi-workers:latest
-      - docker build --cache-from taccaci/geoapi-workers:latest -t taccaci/geoapi-workers:latest -f Dockerfile.potree .
+      - docker build -t taccaci/geoapi-workers:latest -f Dockerfile.potree .
       - sudo mkdir /assets
       - sudo service mysql stop
       - sudo service postgresql stop
@@ -41,10 +30,3 @@ jobs:
       - sleep 5
       script:
       - docker run --net=test -e APP_ENV=testing taccaci/geoapi-workers:latest pytest --cov=geoapi -m "worker"
-      before_deploy:
-         - docker tag taccaci/geoapi-workers:latest taccaci/geoapi-workers:${GIT_HASH}
-      deploy:
-        provider: script
-        script: docker push taccaci/geoapi-workers:latest && docker push taccaci/geoapi-workers:${GIT_HASH}
-        on:
-          branch: master
