Making pgdata volume claim configurable

--- a/kube/geoapi.yaml
+++ b/kube/geoapi.yaml
@@ -419,7 +419,7 @@ spec:
       volumes:
       - name: pgdata
         persistentVolumeClaim:
-          claimName: pgdata
+          claimName: ${PGDATA_PVC}
 
 ---
 apiVersion: apps/v1
